@@ -1,3 +1,3 @@
 package TestCase::Comparator : interface {
-  sub compare : int ($self : self, $x : Object, $y : Object);
+  sub compare : int ($self : self, $x : object, $y : object);
 }
