@@ -5,7 +5,7 @@ package TestCase::ImplementInterface1 {
   sub foo : int ($self : self, $var1 : int, $var2 : long) {
     return 1;
   }
-  sub bar : TestCase::Minimal ($self : self, $var1 : TestCase::Minimal, $var2 : Object) {
+  sub bar : TestCase::Minimal ($self : self, $var1 : TestCase::Minimal, $var2 : object) {
     return undef;
   }
   
