@@ -2,5 +2,5 @@ package TestCase::Interface : interface {
   use TestCase::Minimal;
 
   sub foo : int ($self : self, $var1 : int, $var2 : long);
-  sub bar : TestCase::Minimal ($self : self, $var1 : TestCase::Minimal, $var2 : Object);
+  sub bar : TestCase::Minimal ($self : self, $var1 : TestCase::Minimal, $var2 : object);
 }
