@@ -5,7 +5,7 @@ package TestCase::Interface {
   use TestCase::Interface::ImplementInterface2;
 
   sub basic : int () {
-    my $object : Object = new TestCase::Minimal;
+    my $object : object = new TestCase::Minimal;
     my $implement_interface1 : TestCase::Interface::Interface = new TestCase::Interface::ImplementInterface1;
     my $implement_interface2 : TestCase::Interface::Interface = new TestCase::Interface::ImplementInterface2;
     
