@@ -4,7 +4,7 @@ package TestCase::Interface::ImplementInterface2 {
   sub foo : int ($self : self, $var1 : int, $var2 : long) {
     return 2;
   }
-  sub bar : TestCase::Minimal ($self : self, $var1 : TestCase::Minimal, $var2 : Object) {
+  sub bar : TestCase::Minimal ($self : self, $var1 : TestCase::Minimal, $var2 : object) {
     return undef;
   }
   
